# Equilibrate

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: test.yaml
equilibrate/: __init__.py
equilibrate/cython/: CMakeLists.txt  ChemEquiAnalysis_pxd.pxd  _equilibrate.h  _equilibrate.pyx
equilibrate/fortran/: CMakeLists.txt  equilibrate_c_api.f90
src/: CMakeLists.txt  chemequi.f90  chemequi_cea.f90  chemequi_const.f90  chemequi_yaml.f90  equilibrate.f90  equilibrate_cea.f90  equilibrate_const.f90  equilibrate_version.f90.in  equilibrate_yaml.f90
test/: CMakeLists.txt  photochem_thermo.yaml  test_chemequi.f90  test_equilibrate.f90  test_equilibrate.py  thermo_easy_chem_simp_own.inp  thermo_easy_chem_simp_own.yaml
